// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<li
  className="src-shared-components-TopcoderHeader-desktop-SubMenu-Item-___style__item___2Q-ud src-shared-components-TopcoderHeader-desktop-SubMenu-Item-___style__current___38PHh"
  role="button"
  tabIndex={0}
>
  <Link
    enforceA={false}
    openNewTab={false}
    to="menu url"
  >
    <div
      aria-label="title"
    />
    title
  </Link>
</li>
`;

exports[`Matches shallow shapshot 2`] = `
<li
  className="src-shared-components-TopcoderHeader-desktop-SubMenu-Item-___style__item___2Q-ud"
  role="button"
  tabIndex={0}
>
  <Link
    enforceA={false}
    openNewTab={false}
    to="menu url"
  >
    <div
      aria-label="title"
    />
    title
  </Link>
</li>
`;
